# Crystal

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake.yml
src/: CMakeLists.txt
src/core/base/: CMakeLists.txt
src/core/base/config/: config.cpp  config.hpp  config_parser.cpp  config_parser.hpp
src/core/base/logger/: logger.cpp  logger.hpp
src/core/config/: config.cpp  config.hpp  config_parser.cpp  config_parser.hpp
src/core/logger/: logger.cpp  logger.hpp
test/: CMakeLists.txt  config_test.cpp  logger_test.cpp  test.cpp
test/helper/: test_helper.cpp  test_helper.hpp
